Fix path to font family and remove flex-wrapping from date-wrapper

--- a/styles/partials/components/reservation-form.scss
+++ b/styles/partials/components/reservation-form.scss
@@ -103,6 +103,7 @@
 .date-wraper {
   @include flex-row($justify-content: flex-end);
   width: 300px;
+  flex-wrap: nowrap;
   gap: 16px;
 
   input {
